# facets

./: .gitignore  Cargo.toml
bench/: Cargo.toml
bench/src/: main.rs
btree/: Cargo.toml
btree/src/: lib.rs
index/: Cargo.toml
index/src/: lib.rs
proptest-regressions/: lib.txt
saute/: Cargo.toml
saute/src/: lib.rs
simple/: Cargo.toml
simple/proptest-regressions/: lib.txt
simple/src/: .lib.rs.pending-snap  lib.rs
src/: arena.rs  facet.rs  key.rs  lib.rs  query.rs
