[package]
name = "facets"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "btree","saute"]
resolver = "3"

[workspace.dependencies]
roaring = "0.11.2"
thiserror = "2.0.17"
insta = "1.44.1"
proptest = "1.0.0"

[dependencies]
roaring = { workspace = true }
thiserror = { workspace = true }
